# sigma-webservice

./: .gitignore  Cargo.toml  init-db.sql
res/sigma_frontend/cabinet/: index.html  script.js  style.css
res/sigma_frontend/index/: index.html  script.js  style.css
res/sigma_frontend/login/: index.html  script.js  style.css
src/: main.rs
src/api/: mod.rs
src/config/: mod.rs
src/data/: mod.rs  model.rs
src/sigma_frontend/: mod.rs
src/sigma_frontend/index/: index.html  script.js  style.css
src/sigma_frontend/login/: index.html  script.js  style.css
src/tool/: mod.rs
